deployments/internal-load-balancer/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-deployment-2
  labels:
    app: service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-2
  template:
    metadata:
      labels:
        app: service-2
    spec:
      containers:
      - name: microservice
        image: gcr.io/hcsandbox/serv_n2
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-2
  annotations:
    cloud.google.com/neg: '{"exposed_ports":{"80":{}}}'
spec:
  selector:
    app: service-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
