deployments/internal-load-balancer/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /service-1
        backend:
          serviceName: service-1
          servicePort: 8000
      - path: /service-2
        backend:
          serviceName: service-2
          servicePort: 8001
